--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="scripts/semantic-ui-css/semantic.min.css">
+  <link rel="stylesheet" href="/semantic-ui-css/semantic.min.css">
   <title>SimpleWebRTC Demo</title>
   <style>
     html { margin-top: 20px; }
@@ -119,10 +119,10 @@
   </script>
 
   <!-- Scripts -->
-  <script src="scripts/jquery/dist/jquery.min.js"></script>
-  <script src="scripts/semantic-ui-css/semantic.min.js"></script>
-  <script src="scripts/handlebars/dist/handlebars.min.js "></script>
-  <script src="scripts/simplewebrtc/out/simplewebrtc-with-adapter.bundle.js"></script>
+  <script src="/jquery/dist/jquery.min.js"></script>
+  <script src="/semantic-ui-css/semantic.min.js"></script>
+  <script src="/handlebars/dist/handlebars.min.js "></script>
+  <script src="/simplewebrtc/out/simplewebrtc-with-adapter.bundle.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
