--- a/public/index.html
+++ b/public/index.html
@@ -119,10 +119,10 @@
   </script>
 
   <!-- Scripts -->
-  <script src="/jquery/dist/jquery.min.js"></script>
+  <script src="./jquery.min.js"></script>
   <script src="./semantic.min.js"></script>
-  <script src="/handlebars/dist/handlebars.min.js "></script>
-  <script src="/simplewebrtc/out/simplewebrtc-with-adapter.bundle.js"></script>
+  <script src="./handlebars.min.js"></script>
+  <script src="./simplewebrtc-with-adapter.bundle.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
